tests/mtcp/error/error-mtcp-error8.pkt
0.000 socket(..., SOCK_STREAM, IPPROTO_TCP) = 3
// 0.000 fcntl(3, F_GETFL) = 0x2 (flags O_RDWR)
0.000 fcntl(3, F_SETFL, O_RDWR|O_NONBLOCK) = 0

// Establish connection and verify that there was no error.
0.100 connect(3, ..., ...) = -1
0.100 > S 0:0(0) <...>

+0 < S. 1:1(0) ack 1 win 12336 <TS val 1 ecr 0,eol,mss 14705,eol>
+0.1 > . 1:1(0) ack 1 <...>

+0 < . 1:2042(2041) ack 1 win 25958 <nop, nop, TS val 1 ecr 0>

+0.1 read(3, ..., 20000) =  2041